--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "gsap": "^3.13.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
