--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "gsap": "^3.13.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "ogl": "^1.0.11",
